--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="">
 		<meta name="author" content="">
 		<link rel="icon" href="favicon.ico">
-		<title>Lattes - Onepage Multipurpose Bootstrap HTML</title>
+		<title>Jaesuk Lee</title>
 		<!-- Bootstrap core CSS -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -49,13 +49,7 @@
 							<a class="page-scroll" href="#about">About</a>
 						</li>
 						<li>
-							<a class="page-scroll" href="#services">Services</a>
-						</li>
-						<li>
 							<a class="page-scroll" href="#portfolio">Portfolio</a>
-						</li>
-						<li>
-							<a class="page-scroll" href="#team">Team</a>
 						</li>
 						<li>
 							<a class="page-scroll" href="#contact">Contact</a>
